# MathModAndPP

./: .gitignore  MatrixBlockRamGpus.xlsx  README.md  VectorBlockHCS.xlsx  gitpush.sh  immers.cloud.txt  info.txt
AlgorithmTestResultsDB/: main.cpp
Graph/: Graph.hpp  main.cpp
GridEquationsConstructor/: CMakeLists.txt  main.cpp
GridEquationsConstructorFS/: GridEquationsConstructorFS.sln  Program.fs
HeatEquation1D/: main.cpp  out.txt  plot.py  readme.md
HeatEquation2D/: config.txt  geometry2d.txt  heat2d.cpp  info.md  report.txt
MathModAndPP_HCS/: Doxyfile  gpu-specs.txt  main.cpp  physicalField3D.cpp
Parallel_programming/CUDA/CudaFloatTypesCompare/: CMakeLists.txt  cleanup.bat  compile_and_run.sh  compile_simple.bat  cuda_manager.bat  gpu_query.bat  main.cu  run_cuda_test.bat
PhysField3D/: IPhysField3D.hpp  Indexes.xlsx  PhysField3D.hpp  PhysField3DAlgGrad.hpp  PhysField3DZ.hpp  class-diagram-phys-phield.puml  gradient.cpp  main.cpp  res-omp.txt  res-seq.txt  res.txt
Poisson2D-Jacobi/: main.cpp  plot_heatmap.py
Poisson3D/: Coord3D.hpp  Grid3DParams.hpp  Includes.hpp  ScalarField3D.hpp  ScalarField3DAlg.hpp  XYInd.hpp  XYMask.hpp  ZMask.hpp  ZMaskRepository.hpp  main.cpp  res.txt
Seminars/: 01-Gradient.tex  02-GU1.tex
SvgWriter/: SvgColors.hpp  SvgWriter.hpp  class-diagram.puml  main.cpp
Testing_Thread_OpenMP_Cuda/: app  kernels.cu  main.cpp
Testing_Thread_OpenMP_Cuda_K80_10/: main.cpp
Testing_Thread_OpenMP_Cuda_K80_2/: app  main.cpp
Testing_Thread_OpenMP_Cuda_K80_3/: main.cpp
Testing_Thread_OpenMP_Cuda_K80_4/: config.txt
Testing_Thread_OpenMP_Cuda_K80_5/: app  config.txt  main.cpp
Testing_Thread_OpenMP_Cuda_K80_7/: app  main.cpp  test_tochn
Testing_Thread_OpenMP_Cuda_K80_8/: app
Testing_Thread_OpenMP_Cuda_K80_9/: app  gpu-specs.txt  run.bat
(+1203 files in other folders)
